fix spacing issue

--- a/src/components/searchResults.css
+++ b/src/components/searchResults.css
@@ -5,3 +5,7 @@
     margin-top: 50px;
     line-height: 2.0;
 }
+
+.text {
+    padding: 0 20px;
+}
